--- a/API/InnovaStay.Api/InnovaStay.Api.csproj
+++ b/API/InnovaStay.Api/InnovaStay.Api.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\InnovaStay.Dto\InnovaStay.Dto.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
