--- a/API/InnovaStay.Api/appsettings.json
+++ b/API/InnovaStay.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreDb": "User ID=root;Password=Password1;Host=localhost;Port=5432;Database=InnovaStayDB;Pooling=true;"
+  }
 }
